--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,8 @@ mcversion=1.11.2
 forgeversion=13.20.0.2214
 mcp_mappings=snapshot_20161220
 
+jei_version=4.2.3.222
+
 version_major=1
 version_minor=0
 version_patch=0
