Add curseforge integration

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ mcp_mappings=snapshot_20161220
 
 jei_version=4.2.3.222
 
+curse_project_id=268863
+
 version_major=1
 version_minor=0
 version_patch=0
