--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 }
 
 plugins {
+	id "com.matthewprenger.cursegradle" version "1.0.7"
 	id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.32"
 }
 
@@ -67,7 +68,7 @@ processResources {
 task makeChangelog(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
 	filePath = "changelog.html"
 	untaggedName = "Current release ${project.version}"
-	fromCommit = "5a3850c2642e535656d090d1473054d5fa8d3331"
+	fromCommit = "770efd3c899a1e0bf54f67aaebb0d2580eb18302"
 	toRef =  "HEAD"
 	templateContent = """
 Alpha version, still buggy. Do not create a world you care about with this version, it can and will break things severely.<br/>
@@ -81,6 +82,20 @@ Please help the project by trying it out and <a href="https://github.com/Nedelos
   </ul>
 {{/tags}}
 """
+}
+
+curseforge {
+	apiKey = project.hasProperty('curseforge_apikey') ? project.curseforge_apikey : '0'
+	project {
+		id = curse_project_id
+		changelog = file('changelog.html')
+		changelogType = 'html'
+		releaseType = 'beta'
+	}
+}
+
+afterEvaluate {
+	tasks.curseforge268863.dependsOn.add(makeChangelog)
 }
 
 def getBuildNumber() {
