Add first item unification

--- a/build.gradle
+++ b/build.gradle
@@ -115,8 +115,8 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 task sourcesJar(type: Jar) {
-	from zipTree('build/retromapping/retromappedReplacedMain.jar') // Not sure if this is how Abrar designed it, but grab the remapped src
 	classifier = 'sources'
+	from sourceSets.main.allJava
 }
 
 task apiJar(type: Jar) {
